--- a/layout.html
+++ b/layout.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head> 
     <nav>
         <ul>
-        <li> <a href="#">Homepage</a>
-        <li> <a href="#">About Us</a>
-        <li> <a href="#">Services</a>
-        <li> <a href="#">Contact</a>
-        <li> <a href="#">External</a>
+       <li> <a href="#">Homepage</a> </li>
+        <li> <a href="#">About Us</a> </li>
+        <li> <a href="#">Services</a> </li>
+         <li> <a href="#">Contact</a> </li>
+        <li> <a href="#">External</a> </li>
         </ul>
     </nav>
 <body>
@@ -19,39 +20,106 @@
       <H1> HERO TEXT </H1> 
       <p> Branding Statement here</p>
     </header>
+
     <section>
-    <article> 
+    <article class="headline1"> 
+        <img src="layout-01-assets/img1.jpg">
         <h2> Headline </h2>
         <p> Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerique.</p>
         <p> <a href="#">Button Green </a></p>
     </article>
-    </article>
-<article>
+</section>
+
+<article class="Headline2">
+    <img src="layout-01-assets/img2.jpg">
 <h2> Headline </h2>
 <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem delectus odio doloribus! Quae amet ab libero magni, recusandae, provident consectetur illo ex quisquam a eius et veritatis minima nisi temporibus.</p>
     <p> <a href="#">See Details </a></p>
 </article>
-<article> 
+<article class="Headline3"> 
+    <img src="layout-01-assets/img3.jpg">
     <h2> Headline </h2>
     <p> Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerique.</p>
     <p> <a href="#">Button Red </a></p>
 </article>
 </section>
 <section>
-    <article>
+    <article class="TCLS">
+        <img src="layout-01-assets/img4.jpg" alt=" img4" width="350" height="350" style="vertical-align:bottom"">
         <h3> Two Column Left Side</h3>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex velit iusto atque, totam consequatur veniam iste ea nulla aliquid sed repellendus, fugiat blanditiis aut voluptas, corporis corrupti hic eum suscipit.</p>
         <p> Vestibulum vel muris at at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tinicidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
     </article>
-<article> 
+<article class="TCRS"> 
+    <img src="layout-01-assets/img5.jpg">
     <h3> Two Column Right Side </h3>
     <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis illum quia delectus, saepe, labore, libero ipsa sequi quisquam quidem in voluptas facilis voluptatum atque harum explicabo dolor fuga necessitatibus aliquid?</P>
     <p> Vestibulum vel muris at at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tinicidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
 </article>
 </section>
-<header> Our Services </header>
+<header2> 
+    <h2>Our Services</h4>
 <p> Nunc diam leo, fringilla vulputate elit lorbortis, consectetur Vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
+</header2>
+<section>
+<article>
+<h3> Column One </h3>
+<p> Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+</article>
+</section>
+<article>
+<section>
+<h3> Column Two </h3>
+<p> Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+<h3>  <a href="#">Read It </a></h3>
+</section>
+</article>
+<section>
+<article>
+<h3> Column Three </h3>
+Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+</article>
+</section>
+<section>
+    <article>
+    <h3> Column Four </h3>
+    Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+    <h3>  <a href="#">Details </a></h3>
+    </article>
+    </section>
+    <header3> 
+    <h2>One Big Column</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam tempro eros eget eros maximus, ut cursus sem euismod. Donec iaculius tristique odio at consectetur.
+     Nullam dignissim varius suscipit. Sed in leo sit amet velit finibus pretium. Vivamus dictum nisi ac fermentum interdum. Vestibulum vel muris at erat mattis accumsan
+    et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.
+    Praesent volutpat curses rhoncus. Aenean arcu diam, suscipit ac neque in, sollicitudin convallis orci.         
+    </p>
+    <p> Fusce eu porta massa, sed tincidunt turpis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus a urna tellus. Interger
+      pharetra vitae nisi et lacinia. Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed conballis at risus ullamcorper auctor. Praesent quis velit neque Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque quis, macimus eget nisi.</p>   
+      <h3>  <a href="#">Read More  </a></h3>
+        </header3>
 
+<section>
+<article>
+    <h2> Contact Form </h2>
+        <p> Nunc diam leo, fringilla vulputate elit lobortis, consecture Vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.</p>
+        <p> Etiam a mi quis arcu varius condimentum.</p>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="Email">Email:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <label for="Subject">Subject:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <label for="Your message here">Your message here:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <input type="submit" value="Send">
+            </label>
+        </form>
+</article>
+</section>
+<h1> Footer </h1>
+<p> <em> footer info </em> </p>
+<p> copyright &copy; 2084 Your Company Name</p>
 </body>
-
 </html>
