--- a/layout.html
+++ b/layout.html
@@ -45,37 +45,40 @@
 </section>
 <section>
     <article class="TCLS">
-        <img src="layout-01-assets/img4.jpg" alt=" img4" width="350" height="350" style="vertical-align:bottom"">
+        <img src="layout-01-assets/img4.jpg" alt=" img4" width="600" height="350" style="vertical-align:bottom">
         <h3> Two Column Left Side</h3>
         <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex velit iusto atque, totam consequatur veniam iste ea nulla aliquid sed repellendus, fugiat blanditiis aut voluptas, corporis corrupti hic eum suscipit.</p>
         <p> Vestibulum vel muris at at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tinicidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
     </article>
 <article class="TCRS"> 
-    <img src="layout-01-assets/img5.jpg">
+    <img src="layout-01-assets/img5.jpg"  width="600" height="353" style="vertical-align:bottom">
     <h3> Two Column Right Side </h3>
     <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis illum quia delectus, saepe, labore, libero ipsa sequi quisquam quidem in voluptas facilis voluptatum atque harum explicabo dolor fuga necessitatibus aliquid?</P>
     <p> Vestibulum vel muris at at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tinicidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.</p>
 </article>
 </section>
-<header2> 
-    <h2>Our Services</h4>
-<p> Nunc diam leo, fringilla vulputate elit lorbortis, consectetur Vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
+<header2 class="OurServices" > 
+    <h2 class="OURSERVICESH2">Our Services</h4>
+<p class="servicesP"> Nunc diam leo, fringilla vulputate elit lorbortis, consectetur Vestibulum quam. Sed id felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. Etiam a mi quis arcu varius condimentum.</p>
 </header2>
 <section>
-<article>
+<article class=" COLUMNONE">
+    <img src="layout-01-assets/img6.jpg">
 <h3> Column One </h3>
 <p> Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
 </article>
 </section>
-<article>
+<article class="COLUMNTWO">
 <section>
+    <img src="layout-01-assets/img7.jpg">
 <h3> Column Two </h3>
 <p> Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
 <h3>  <a href="#">Read It </a></h3>
 </section>
 </article>
 <section>
-<article>
+<article class="COLUMNTHREE">
+    <img src="layout-01-assets/img8.jpg">
 <h3> Column Three </h3>
 Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
 </article>
